@@ -5,6 +5,7 @@ Version 2.0.0rc6 - The '???' version.
 	phoenix:
 		* Fixed a compilation warning + appartently useless code in 
 		  DirectoryTree.cpp.
+		* Fixed amuleIPV4Address for wx-2.5.2 and up.
 
 Version 2.0.0rc5 - The 'Let's recover our release speed' version.
 ----------
